--- a/MCS_K8sEdge_Bernd_KLAUS.tex
+++ b/MCS_K8sEdge_Bernd_KLAUS.tex
@@ -12,6 +12,29 @@
 \usepackage{hyperref}
 \usepackage{listings}
 
+
+\lstset{
+    captionpos=b,
+    numberbychapter=false,
+    caption=\lstname,
+    frame=single,
+    numbers=left,
+    stepnumber=1,
+    numbersep=2pt,
+    xleftmargin=15pt,
+    framexleftmargin=15pt, 
+    %umberstyle=\tiny,
+    tabsize=3,
+    columns=fixed,
+    basicstyle={\fontfamily{pcr}\selectfont\footnotesize},
+    keywordstyle=\bfseries,
+    commentstyle={\color[gray]{0.33}\itshape},
+    stringstyle=\color[gray]{0.25},
+    breaklines,
+    breakatwhitespace
+}
+\lstloadlanguages{bash}
+
 % Define Code-Color
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
@@ -49,28 +72,6 @@
 \makeatother
 \newcommand{\listofcode}{\phantomsection\lstlistoflistings}
 
-% Die nachfolgenden Pakete stellen sonst nicht benötigte Features zur Verfügung
-\usepackage{blindtext}
-
-% BERND: Code Style-Settings
-\lstdefinestyle{default}{
-    backgroundcolor=\color{backcolour},   
-    commentstyle=\color{codegreen},
-    keywordstyle=\color{magenta},
-    numberstyle=\tiny\color{codegray},
-    stringstyle=\color{codepurple},
-    basicstyle=\ttfamily\footnotesize,
-    breakatwhitespace=false,         
-    breaklines=true,                 
-    captionpos=b,                    
-    keepspaces=true,                 
-    numbers=left,                    
-    numbersep=5pt,                  
-    showspaces=false,                
-    showstringspaces=false,
-    showtabs=false,                  
-    tabsize=2
-}
 
 %
 % Einträge für Deckblatt, Kurzfassung, etc.
@@ -111,7 +112,6 @@ Research" to give introductions on how to choose the proper environment.
 %
 
 \begin{document}
-
 
 \maketitle
 
