--- a/MCS_K8sEdge_Bernd_KLAUS.tex
+++ b/MCS_K8sEdge_Bernd_KLAUS.tex
@@ -65,7 +65,7 @@
 %Quellcodeverzeichnis. Definition des Macros listoflolentryname analog zu listoflofentryname und
 %listoflotentryname der KOMA-Klasse
 \@ifclasswith{scrbook}{listof=entryprefix}
-{%
+{% 
     \newcommand\listoflolentryname\lstlistingname
 }{%
 }
@@ -84,26 +84,13 @@
 \place{Wien}
 
 \kurzfassung{
-Kubernetes wird als Schweizer Armemesser der Container-Orchestrierung bezeichnet. Auch im Bereich
-Edge-Computing bietet der Dienst eine Vielzahl an unterschiedlichen Werkzeugen und Tools an, welche
-Teils unterschiedliche Strategien und Ansätze verfolgen. Die Auswahl reicht von einem zentralen 
-Kubernetes-Cluster der verteilte Geräte, sogenannte „Leafs“, steuert bis hin zu vielen einzelnen und
-verteilten kleinen Clustern an der Edge, welche zentral gesteuert werden. Entscheidend ist es den 
-richtigen Anwendungsfall zu erheben, um sich für die optimale Lösung entscheiden zu können.
-Ebenfalls spielen sicherheitstechnische Aspekte bei derart komplexen Umgebungen eine wichtige Rolle.
-Die vorliegende Arbeit gibt Einblicke und Entscheidungsgrundlagen sowie Empfehlungen hinsichtlich
-der IT-Security. Belegt werden die Angaben durch Implementierung eines Proof-of-Concepts
+Kubernetes wird als Schweizer Armemesser der Container-Orchestrierung bezeichnet. Auch im Bereich Edge-Computing bietet der Dienst eine Vielzahl an unterschiedlichen Werkzeugen und Tools an, welche Teils unterschiedliche Strategien und Ansätze verfolgen. Die Auswahl reicht von einem zentralen Kubernetes-Cluster der verteilte Geräte, sogenannte „Leafs“, steuert bis hin zu vielen einzelnen und verteilten kleinen Clustern an der Edge, welche zentral gesteuert werden. Entscheidend ist es den richtigen Anwendungsfall zu erheben, um sich für die optimale Lösung entscheiden zu können. Ebenfalls spielen sicherheitstechnische Aspekte bei derart komplexen Umgebungen eine wichtige Rolle. Die vorliegende Arbeit gibt Einblicke und Entscheidungsgrundlagen sowie Empfehlungen hinsichtlich der IT-Security. Belegt werden die Angaben durch Implementierung eines Proof-of-Concepts
 }
 \schlagworte{Kubernetes, Edge-Computing, distributed System, Proof-of-Concept}
 
+
 \outline{
-Kubernetes is the de facto swiss-army-knfife for orchestrating conatiner-platforms. In addition,
-kubernetes is also offering a toolset necessary for deploying on the edge. However, there are
-different methods for archiving comparable results. On the one hand a possible solution is to build
-a central instance managing small distributed and independent cluster, on the other hand a
-centralized cluster with just leafs on the edge may is a better fit. The challenge is to dine the
-best solution for the desired environment. The following thesis is making use of "Design Science
-Research" to give introductions on how to choose the proper environment.
+Kubernetes is the de facto swiss-army-knfife for orchestrating conatiner-platforms. In addition, Kubernetes can also be faciliated for deploying devices as well as applications on top of it on the edge of the network. However, there are different methods for archiving comparable results. On the one hand a possible solution is to build a central instance managing small distributed and independent clusters, on the other hand a centralized cluster with just leafs on the edge may is a better fit. This results in the challenge to find the best solution for the desired environment respectively use-case. The following thesis is making use of "Design Science Research" to give introductions on how to choose the proper architecture for the aimed environment.
 }
 \keywords{Kubernetes, Edge-Computing, distributed System, Proof-of-Concept}
 
@@ -116,58 +103,102 @@ Research" to give introductions on how to choose the proper environment.
 \maketitle
 
 \chapter{Introcution}
-Because of IoT Devices becoming more and more common, the number of devices capable of communicating
-with the \ac{WWW} increases rapidly. Consequently, also the overall traffic generated as well the
-amount of data which must be processed increases accordingly. Regarding this development
-Edge-Computing is the rising start trying to solve that issues. Thereby data is not processed
-centrally like in traditional datacenters, but it is tried to handle those data close to the user 
-within several distributed systems. Because of this method only really necessary data is transmitted
-to a central instance for further treatment and those the processing-power as well as the bandwidth
-necessary for processing required data is reduced significant. \par
-It is expected that the number of IoT devices will continue to grow fast\cite{SotE21} over the
-coming years. Concomitant Edge-Computing also will become more important in the future and play
-an important role in modern \ac{IT} architectures. \par
-To be able to control distributed systems effectively \ac{K8S} is providing a lot of useful tools
-and functions. Fundamentally there are two different approaches regrading the architecture of how To
-build an Edge-Computing environment using \ac{K8S}:
+\label{chap:introduction}
+Because of \ac{IoT} Devices becoming more and more common, the number of devices capable of communicating with the \ac{WWW} increases rapidly. Consequently, also the overall traffic generated as well the amount of data which must be processed increases accordingly. Regarding this development Edge-Computing is the rising start trying to solve that issues. Thereby data is not processed centrally like in traditional datacenters, but it is tried to handle those data close to the user within several distributed systems. Because of this methodlogy only really necessary data is transmitted to a central instance for further treatment and those the processing-power as well as the bandwidth necessary for processing required data is reduced significant. \par It is expected that the number of IoT devices will continue to grow fast\cite{SotE21} over the coming years. Concomitant Edge-Computing also will become more important in the future and become an important role in modern \ac{IT} architectures. \par To be able to control distributed systems effectively \ac{K8S} is providing a lot of useful tools and functions. Fundamentally there are three different approaches regrading the architecture of how to build an Edge-Computing environment making use of \ac{K8S}:
 
 \begin{itemize}
-    \item One centralized \ac{K8S} Cluster controlling many Leaf-Devices on the Edge.
+    \label{item:architecture}
+    \item A centralized \ac{K8S} Cluster controlling many Leaf-Devices (Workers) on the Edge.
     \item Small and distributed \ac{K8S} Clusters running independent on the Edge controlled by a
     centralized Master-Instance.
+    \item A Service-Mesh expanding the functionality of the \ac{K8S} networking stack.
 \end{itemize}
 
 \section{Problem area}
-Problems arise when trying to find the proper architecture for a specific use-cases. There is no
-clear winner when comparing the above-mentioned different variants. Each of the both architectures
-have their own pros and cons and may decide whether a project is successful or not. It is therefore
-all the more important to choose the proper architecture right before starting, changing the
-strategy in retrospect would take a lot of time and effort. However, there is no clear guidance on
-how to find the proper target environment, at least none which apply in general. Occasionally one
-finds recommendations for very specific use case, however the chance is slim low this findings fit
-your goals respectively enlighten the architecture decision. This leads us to the following research
-question.
+Problems arise when trying to find the proper architecture for a specific use-cases. There is no clear winner when comparing the above-mentioned different variants. Each of them  have their own pros and cons and may decide whether a project is successful or not. It is therefore all the more important to choose the proper architecture right before starting, changing the strategy in retrospect would take a lot of time and effort. However, there is no clear guidance on how to find the proper target environment, at least none which apply in general. Occasionally one finds recommendations for very specific use case, however the chance is slim low this findings fit your goals respectively enlighten the architecture decision. This leads us to the following research question.
 
 \section{Research question}
 This paper is going to answer the subsequent research questions:
 \begin{enumerate}
-    \item What are the main differences between the both defined main variants regarding
-    functionality, scalability, costs and security?
+    \item What are the main differences of the above mentiones architectures regarding   functionality, scalability, costs and security?
     \item Which decision criteria must be defined respectively examined to create a catalog capable
-    of making choose the proper architecture easier for \ac{IT} managers as well as administrators.
-    \item Can two Proof-of-Concept environments, compared using the Design Science Research pattern,
-    prove the accuracy of defined criteria accordingly.
+    of making choose the proper architecture easier for \ac{IT} managers as well as administrators?
+    \item Is there a trend in which technology is most likely to be used?
 \end{enumerate}
 
-\section{Methodology}
-In the first part of the present work existing literature will be inspected. Related and relevant
-work will be examined accordingly and linked in the document. Also results will be incorporated to
-get out the most of it. In the second part a catalog with main criteria necessary for
-decision-making is defined. The last chapter is testing those criteria against real world examples
-making use of the Design Science Research methodology. The last chapter is getting the most focus
-because it is the area where new technics respectively architecture decision are finally verified
-and those proof if the catalog is working as expected or not.
+\section{Goal}
+The main goal of this thesis is to highlight the pros and cons for each of the \hyperref[item:architecture]{architectures} defined in the \hyperref[chap:introduction]{Introduction}. The focus will mainly be on the geo-distribution aspect. Altough \ac{IoT} is playing a major role in pushing the development forward, however it is not considered further in the present work. To find the proper architecture, or at least recommandations what could fit best for different desired use-cases, a catalog will be defined. An important part will become the decision tree helping people making comprehensible decisions based on scientific research. The meain characteristics which are taken into account are scalability, state-of-the-art, handling, costs as well as security.
 
+\section{Methodology}
+In the first part of the present work existing literature will be inspected. Related and relevant work will be examined accordingly and linked in the document. Also results will be incorporated to get out the most of it. In the second part a catalog with main criteria necessary for decision-making is defined. Part of this catalog will also be a decisicon-tree, mentioned in the previous chapter, to easily find the proper architecture. The last chapter deals with testing the defined criteria against real world examples making use of the \ac{DSR} methodology. The last chapter is getting the most focus because it is the area where new technics respectively architecture decision are finally verified and those proofs if the catalog is working as expected or not. In the latter case, the catalog will be revised to reflect the findings of the last step and re-examinated again using \ac{DSR}
+
+\chapter{Current State}
+\label{chap:current}
+
+\section{Technology}
+\subsection{Kubernetes}
+short introduction
+Target length: 1-2 S
+\subsection{Edge-Computing}
+short introduction
+Target length: 1-2 S
+\paragraph{Geo-Distribution}
+short introduction - whats that!
+Target length: 0,5-1 S
+
+\section{Architecture}
+\subsection{Default}
+Centralized Master and Workers at the Edge (Default!) K8s architecture
+why is it called Default
+challanges
+Target length: 2-4 S (incl. picture)
+\subsection{distributed K8s}
+Cluster running indepented
+Target length: 2-4 S (incl. picture)
+\subsection{Service Mesh}
+Using the Service-Mesh for Edge-Computing (Smar-Nic!)
+Target length: 2-4 S (incl. picture)
+
+\section{Related Work}
+Target length: 3 S (all subsections)
+\subsection{RL 1}
+\subsection{RL N}
+
+\chapter{Catalog}
+\section{Decision Variable}
+Target length: 1-2 S
+\section{Decision Tree}
+Target length: 1 S
+\section{Exclusions and Special Cases}
+Target length: 1 S
+
+\chapter{Design Science Research}
+\section{Methodlogy}
+\subsection{Performed Tests}
+Target length: 2 S
+\section{Environment}
+describe the test-environemtn
+Target length: 0,5-1 S
+\section{Architecture}
+\subsection{Default}
+Target length: 3-4 S
+\subsection{distributed K8s}
+Target length: 3-4 S
+\subsection{Service Mesh}
+Target length: 3-4 S
+\section{Analysis}
+Target length: 2 S
+
+\chapter{Results}
+Target length: 3 S (all together)
+\section{Findings}
+\section{Conclusio}
+\section{Discussion and further research}
+
+
+Sites:
+- longest: 45 (may i need even more)
+- shortest: 31 (zu wenig)
 
 %
 % Hier beginnen die Verzeichnisse.
@@ -196,6 +227,8 @@ and those proof if the catalog is working as expected or not.
     \acro{IT}[IT]{Information Technology}
     \acro{WWW}[WWW]{world wide web}
     \acro{K8S}[K8S]{Kubernetes}
+    \acro{IoT}[IoT]{Internet-of-Things}
+    \acro{DSR}[DSR]{Design Science Research}
 \end{acronym}
 
 %
