add related work

--- a/MCS_K8sEdge_Bernd_KLAUS.tex
+++ b/MCS_K8sEdge_Bernd_KLAUS.tex
@@ -157,10 +157,15 @@ Target length: 0,5-1 S
 \section{Related Work}
 \label{sec:related}
 Target length: 3 S (all subsections)
-\subsection{Extend Cloud to Edge with KubeEdge}
-Descripes KubeEdge and its advantages
 \subsection{Kubernetes and the Edge?}
 Some introdution to K8s at the Edge, highlighting the main Architectures.
+\subsection{Extend Cloud to Edge with KubeEdge}
+Descripes KubeEdge and its advantages
+\subsection{Sharpening Kubernetes for the Edge}
+Sharpening Kubernetes for the Edge
+Make Kubernetes aware of the latency between the nodes at the edge.
+\subsection{Ultra-Reliable and Low-Latency Computing in the Edge with Kubernetes}
+TO DO!
 
 \section{Architecture}
 \label{sec:architecture}
