chapter reorder and use-cases added

--- a/MCS_K8sEdge_Bernd_KLAUS.tex
+++ b/MCS_K8sEdge_Bernd_KLAUS.tex
@@ -165,7 +165,7 @@ Descripes KubeEdge and its advantages
 Sharpening Kubernetes for the Edge
 Make Kubernetes aware of the latency between the nodes at the edge.
 \subsection{Ultra-Reliable and Low-Latency Computing in the Edge with Kubernetes}
-TO DO!
+Similar to the paper before. Latecny awar pod deploymentm, but you also can deploy to regions and an custom re-scheduler is implementated taking care of redeploying when one node fails.
 
 \section{Architecture}
 \label{sec:architecture}
@@ -180,23 +180,6 @@ Target length: 2-4 S (incl. picture)
 \subsection{Service Mesh}
 Using the Service-Mesh for Edge-Computing (Smar-Nic!)
 Target length: 2-4 S (incl. picture)
-
-
-\chapter{Catalog}
-\label{chap:catalog}
-
-\section{Decision Variables}
-\label{sec:variables}
-Target length: 1-2 S
-
-\section{Decision Tree}
-\label{sec:tree}
-Target length: 1 S
-
-\section{Exclusions and Special Cases}
-\label{sec:exclusions}
-Target length: 1 S
-
 
 
 
@@ -221,10 +204,38 @@ Target length: 3-4 S
 Target length: 3-4 S
 \subsection{Service Mesh}
 Target length: 3-4 S
+
+\section{Use-Cases}
+\subsection{Web-Application}
+Target length: 1
+\subsection{Enterprise VPN}
+Target length: 1
+\subsection{Distributed Database}
+Target length: 1
+
 \section{Analysis}
-Target length: 2 S
+Target length: 4 S
+\subsection{Relevant Magnitudes}
+\subsection{Performed Tests}
+\subsection{Outcome}
+\subsection{Paraphrase}
 
 
+
+\chapter{Catalog}
+\label{chap:catalog}
+
+\section{Decision Variables}
+\label{sec:variables}
+Target length: 1-2 S
+
+\section{Decision Tree}
+\label{sec:tree}
+Target length: 1 S
+
+\section{Exclusions and Special Cases}
+\label{sec:exclusions}
+Target length: 1 S
 
 
 \chapter{Results}
@@ -243,8 +254,8 @@ Target length: 3 S (all together)
 \paragraph{Notes}
 ---to-be-removed---
 Sites:
-- longest: 45 (may i need even more)
-- shortest: 31 (zu wenig)
+- longest: 50 (may i need even more)
+- shortest: 36 (zu wenig)
 -------------------
 
 
