reorg + some more stuff

--- a/MCS_K8sEdge_Bernd_KLAUS.tex
+++ b/MCS_K8sEdge_Bernd_KLAUS.tex
@@ -138,7 +138,7 @@ In the first part of the present work existing literature will be inspected. Rel
 
 
 
-\chapter{Current State}
+\chapter{State of the Art}
 \label{chap:current}
 
 \section{Technology}
@@ -154,18 +154,7 @@ short introduction - whats that!
 Target length: 0,5-1 S
 
 
-\section{Related Work}
-\label{sec:related}
-Target length: 3 S (all subsections)
-\subsection{Kubernetes and the Edge?}
-Some introdution to K8s at the Edge, highlighting the main Architectures.
-\subsection{Extend Cloud to Edge with KubeEdge}
-Descripes KubeEdge and its advantages
-\subsection{Sharpening Kubernetes for the Edge}
-Sharpening Kubernetes for the Edge
-Make Kubernetes aware of the latency between the nodes at the edge.
-\subsection{Ultra-Reliable and Low-Latency Computing in the Edge with Kubernetes}
-Similar to the paper before. Latecny awar pod deploymentm, but you also can deploy to regions and an custom re-scheduler is implementated taking care of redeploying when one node fails.
+
 
 \section{Architecture}
 \label{sec:architecture}
@@ -236,6 +225,22 @@ Target length: 1 S
 \section{Exclusions and Special Cases}
 \label{sec:exclusions}
 Target length: 1 S
+
+
+
+\chapter{Related Work}
+\label{chap:related}
+Target length: 3 S (all subsections)
+\section{Kubernetes and the Edge?}
+Some introdution to K8s at the Edge, highlighting the main Architectures.
+\section{Extend Cloud to Edge with KubeEdge}
+Descripes KubeEdge and its advantages
+\section{Sharpening Kubernetes for the Edge}
+Sharpening Kubernetes for the Edge
+Make Kubernetes aware of the latency between the nodes at the edge.
+\section{Ultra-Reliable and Low-Latency Computing in the Edge with Kubernetes}
+Similar to the paper before. Latecny awar pod deploymentm, but you also can deploy to regions and an custom re-scheduler is implementated taking care of redeploying when one node fails.
+Clustering node-groups based on latency.
 
 
 \chapter{Results}
