cite style and some text

--- a/Literatur.bib
+++ b/Literatur.bib
@@ -2,13 +2,22 @@
 
 @Report{SotE21,
   author      = {Fay Arjomandi and Matt Trifiro and Jacob Smith},
-  date        = {2021},
+  date        = {2020-08-01},
   institution = {The Linud Foundation},
   title       = {State of the Edge 2021},
-  type        = {techreport},
+  type        = {resreport},
   subtitle    = {A Market and Ecosystem Report for Edge Computing},
   url         = {https://stateoftheedge.com/reports/state-of-the-edge-report-2021/},
   groups      = {Report},
+}
+
+@Report{k8ssurv,
+  author      = {Portworx},
+  date        = {2021-03-26},
+  institution = {PureStorage},
+  title       = {Kubernetes Adoption Survey},
+  type        = {resreport},
+  url         = {https://www.purestorage.com/content/dam/pdf/en/analyst-reports/ar-portworx-pure-storage-2021-kubernetes-adoption-survey.pdf},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
